testsuite/bsc.bugs/github/gh353/BSV_Cons_NonNamedFields.bsv

import Types_NonNamed::*;

function Foo fn1 ();
  return tagged Bar { _1: True, _2: False };
endfunction

function Bool fn2 (Foo v);
  case (v) matches
    tagged Bar { _1: .x, _2: .y }: return (x && y);
    default: return False;
  endcase
endfunction
